Bug 970257 - Make <input type=number> handle auto width properly. r=dholbert, a=sylvestre